tests/cases/should_fail/misc/double_hash.stderr
error: expected a name here
 --> $DIR/double_hash.hash:1:7
1 |   k := ##naughty_intrinsic();
  |         ^ here
